--- a/syles/flower.css
+++ b/syles/flower.css
@@ -52,3 +52,21 @@ body {
     height: 800px;
     margin: 50px 240px 0 90px; 
 }
+/*..............main styles............ */
+/* .main{
+    text-align: center;
+} */
+.main-title{
+    text-align: center;
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+    margin-top: 170px;
+}
+.main-discription{
+    text-align: center;
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 24px;
+}
