--- a/syles/flower.css
+++ b/syles/flower.css
@@ -47,7 +47,6 @@ body {
 
 .banner-img {
     width: 500px;
-    /* position: absolute; */
     bottom: 0;
     height: 800px;
     margin: 50px 240px 0 90px;
@@ -92,13 +91,13 @@ body {
 
 
 
-.container-box{
+.container-box {
     display: flex;
-   justify-content: space-around;
-   padding-top: 48px;
+    justify-content: space-around;
+    padding-top: 48px;
 }
 
-.img-5{
+.img-5 {
     max-width: 450px;
     height: 550px;
     justify-content: space-around;
@@ -106,11 +105,39 @@ body {
     border-radius: 300px 300px 0 0;
     background: rgba(5, 151, 160, 0.15);
 }
-.img-7{
+
+.img-7 {
     max-width: 450px;
     height: 550px;
     justify-content: space-around;
     padding: 110px 75px 0px 75px;
     border-radius: 300px 300px 0 0;
     background: rgba(71, 125, 17, 0.15);
+}
+
+.icon {
+    display: flex;
+    justify-content: space-around;
+    background: rgba(39, 39, 39, 0.05);
+    border-radius: 8px;
+    margin: 128px 240px;
+}
+
+.icon-size {
+    weight: 88px;
+    height: 88px;
+    /* padding-top: 85px;
+    padding-bottom: 24px;
+    padding-left: 300px;
+    padding-right: 250px; */
+    padding: 85px 150px 0px 200px;
+    gap: 24px;
+}
+
+.icon-title {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 16px 48px 50px 48px;
 }
