--- a/syles/flower.css
+++ b/syles/flower.css
@@ -53,9 +53,6 @@ body {
 }
 
 /*..............main styles............ */
-/* .main{
-    text-align: center;
-} */
 .main-title {
     text-align: center;
     color: #272727;
@@ -140,4 +137,77 @@ body {
     font-size: 18px;
     font-weight: 400;
     padding: 16px 48px 50px 48px;
+}
+
+/* poster main part 3 */
+.poster {
+    display: flex;
+    width: 1922px;
+    height: 620px;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+    text-align: center;
+    /* padding: 50px 24px; */
+    /* margin: 50px 24px; */
+
+
+}
+
+.poster {
+    color: #272727;
+    font-size: 16px;
+    padding-top: 230px;
+
+}
+
+.poster-title {
+    font-size: 40px;
+    font-weight: 800;
+    margin: 200px;
+    margin-bottom: 24px;
+
+}
+
+.poster-discription {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    margin-left: 200px;
+    margin-right: 80px;
+}
+
+.poster-pic {
+    margin-right: 350px;
+    width: 318px;
+}
+
+/* blogs */
+/* .blogs{
+    text-align: center;
+} */
+
+.social-name {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-top: 120px;
+}
+
+.social-heading {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    padding-top: 24px;
+}
+
+.flower-size {
+    width: 100px;
+    height: 396px;
+    align-items: center;
+    display: flex;
+    /* justify-content: space-around; */
+    justify-content: space-between;
+    gap: 16px;
+    /* margin:48px 240px; */
 }
